@@ -67,8 +67,8 @@ sub execute {
     # class that can be reused.  Maybe subclassed for HTML and text.
 
     if ( $diff->is_different ) {
-        $self->show( "--- $left",  { color => $PINTO_COLOR_1 } );
-        $self->show( "+++ $right", { color => $PINTO_COLOR_1 } );
+        $self->show( "--- $left",  { color => $PINTO_PALETTE_COLOR_1 } );
+        $self->show( "+++ $right", { color => $PINTO_PALETTE_COLOR_1 } );
     }
 
     my $format = $self->style eq $PINTO_DIFF_STYLE_DETAILED
@@ -76,7 +76,7 @@ sub execute {
         : '%o[%F] %a/%f';
 
     for my $entry ( $diff->entries ) {
-        my $color  = $entry->is_addition ? $PINTO_COLOR_0 : $PINTO_COLOR_2;
+        my $color  = $entry->is_addition ? $PINTO_PALETTE_COLOR_0 : $PINTO_PALETTE_COLOR_2;
         my $string = $entry->to_string($format);
         $self->show( $string, { color => $color } );
     }
