@@ -26,10 +26,10 @@ Readonly our @EXPORT_OK => qw(
     $PINTO_SERVER_NULL_MESSAGE
     $PINTO_SERVER_PROGRESS_MESSAGE
 
-    $PINTO_DEFAULT_COLORS
-    $PINTO_COLOR_0
-    $PINTO_COLOR_1
-    $PINTO_COLOR_2
+    $PINTO_DEFAULT_PALETTE
+    $PINTO_PALETTE_COLOR_0
+    $PINTO_PALETTE_COLOR_1
+    $PINTO_PALETTE_COLOR_2
 
     $PINTO_LOCK_TYPE_SHARED
     $PINTO_LOCK_TYPE_EXCLUSIVE
@@ -56,7 +56,7 @@ Readonly our @EXPORT_OK => qw(
 
 Readonly our %EXPORT_TAGS => (
     all        => \@EXPORT_OK,
-    color      => [ grep {m/COLOR/x} @EXPORT_OK ],
+    color      => [ grep {m/PALETTE/x} @EXPORT_OK ],
     server     => [ grep {m/SERVER/x} @EXPORT_OK ],
     regex      => [ grep {m/REGEX/x} @EXPORT_OK ],
     lock       => [ grep {m/LOCK/x} @EXPORT_OK ],
@@ -84,11 +84,11 @@ Readonly our $PINTO_SERVER_PROGRESS_MESSAGE => "${PINTO_SERVER_DIAG_PREFIX}. ##"
 
 #------------------------------------------------------------------------------
 
-Readonly our $PINTO_DEFAULT_COLORS => [qw(green yellow red)];
+Readonly our $PINTO_DEFAULT_PALETTE => [qw(green yellow red)];
 
-Readonly our $PINTO_COLOR_0 => 0;
-Readonly our $PINTO_COLOR_1 => 1;
-Readonly our $PINTO_COLOR_2 => 2;
+Readonly our $PINTO_PALETTE_COLOR_0 => 0;
+Readonly our $PINTO_PALETTE_COLOR_1 => 1;
+Readonly our $PINTO_PALETTE_COLOR_2 => 2;
 
 #------------------------------------------------------------------------------
 
@@ -126,11 +126,11 @@ Readonly our @PINTO_DIFF_STYLES => ($PINTO_DIFF_STYLE_CONCISE, $PINTO_DIFF_STYLE
 
 Readonly our $PINTO_PUBLIC_CPAN_URI       => URI->new('http://www.cpan.org');
 Readonly our $PINTO_BACKPAN_CPAN_URI      => URI->new('http://backpan.perl.org');
-Readonly our $PINTO_STRATOPAN_CPAN_URI    => URI->new('http://cpan.stratopan.com'); 
+Readonly our $PINTO_STRATOPAN_CPAN_URI    => URI->new('http://cpan.stratopan.com');
 Readonly our $PINTO_STRATOPAN_LOCATOR_URI => URI->new('http://meta.stratopan.com/locate');
 
-Readonly our @PINTO_DEFAULT_SOURCE_URIS => ( $PINTO_STRATOPAN_CPAN_URI, 
-                                             $PINTO_PUBLIC_CPAN_URI, 
+Readonly our @PINTO_DEFAULT_SOURCE_URIS => ( $PINTO_STRATOPAN_CPAN_URI,
+                                             $PINTO_PUBLIC_CPAN_URI,
                                              $PINTO_BACKPAN_CPAN_URI );
 
 #------------------------------------------------------------------------------
